# aptg

./: .bleep  .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  config.toml  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
src/audit/: log.rs
src/cache/: cache.rs
src/geoip/: database.rs  location.rs  mod.rs  policy.rs
src/mirror/: cache.rs  fetch.rs  mod.rs  path.rs
src/policy/: rules.rs
src/server/: router.rs  router_broken.rs  router_old.rs
src/tls/: certificate.rs  certificate_simple.rs  client.rs  mod.rs  server.rs  simple_server.rs
src/verify/: gpg.rs  hashes.rs  mod.rs
